Fixed spacing issues for notification banner on modifiers for subelements

--- a/frontend/src/styles/components/builder/_Modifiers.scss
+++ b/frontend/src/styles/components/builder/_Modifiers.scss
@@ -24,3 +24,9 @@
     }
   }
 }
+
+.modifier-select {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 10px;
+}
