--- a/frontend/src/styles/elements/_base.scss
+++ b/frontend/src/styles/elements/_base.scss
@@ -153,7 +153,10 @@ h6 {
   font-size: 0.8em;
   background-color: lighten($blue-light, 35%);
   padding: 10px;
-  float: right;
+
+  span.fa {
+    margin-right: 5px;
+  }
 }
 
 .error-message {
